--- a/app/views/shared/_js_templates.html.haml
+++ b/app/views/shared/_js_templates.html.haml
@@ -9,6 +9,7 @@
     <ul class="notifications-list">
       {{#each notifications}}
       <li class="notifications-item">
+        <img src="{{attributes.avatars.collection.1.url}}" height="24" width="24" />
         <a href="{{attributes.action_url}}">
           <p>{{attributes.moment_title}}</p>
         </a>
