--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -49,6 +49,8 @@
     padding: 8px
     margin-bottom: 0
     line-height: 1.4em
+    float: left
+    width: 85%
 
   img
     height: 24px
@@ -59,9 +61,9 @@
     border-radius: 20px
     border: 1px solid #ddd
 
-    .activity-timestamp
-      display: block
-      font-size: 12px
+  .activity-timestamp
+    display: block
+    font-size: 12px
 
 .notifications-empty
   p
@@ -81,7 +83,7 @@ article.social-requests ul
 
   .requests-field-query
     margin-left: 15px
-    width: 235px
+    width: 260px
 
   .requests-field-submit
     margin-left: 10px
@@ -120,8 +122,7 @@ article.social-requests ul
     position: absolute
     top: 48px
     left: 40px
-    min-width: 330px
-    max-width: 450px
+    width: 350px
     border: 1px solid #d4d4d4
     +border-radius(5px)
     background: #fff
