--- a/app/views/notifications/_list.html.haml
+++ b/app/views/notifications/_list.html.haml
@@ -6,6 +6,8 @@
   %ul.notifications-list
     - notifications.each do |notification|
       %li.notifications-item
+        - if notification.avatars
+          %img{width: "48px", height: "48px", src: notification.avatars.md_avatar.url }
         %p
           %a.activity-title{href: notification.action_url}
             = notification.moment_title
