social reading plan mobile fixes

--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -74,7 +74,7 @@
 #header #nav_signin,
 #header .profile_btn,
 #header .back_btn
-  text-indent: -100%
+  text-indent: -2000px
   white-space: nowrap
   display: block
   height: 26px
@@ -135,9 +135,8 @@
   +border-radius(4px)
 
 #header #m_plan_btn
-  padding: 10px 4px 13px 10px !important
-  margin-left: 0px
   cursor: pointer
+  margin: 0
 
 #header .plan_day
   color: white !important
@@ -146,7 +145,7 @@
   display: block
   min-width: 42px
   max-width: 62px
-  line-height: 27px
+  line-height: 18px
   float: left
 
 #header .settings_btn,
@@ -161,8 +160,8 @@
   background: image-url("mobile/info_btn.png") 12px 8px no-repeat
 
 #header .plan_btn
-  background: image-url("icon_plan.png") right center no-repeat
-  padding: 0px 8px 0px 14px
+  background: image-url("icon_plan.png") right 0px no-repeat
+  padding: 0px 12px 0px 14px
   width: auto
 
 #header .profile_btn
