Coded + styled social intro page
Some small changes will be needed once Typekit is working.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -807,3 +807,95 @@ body.transition .moment
   textarea
     margin-bottom: 10px
     height: 200px
+
+
+// !Intro to social page
+
+#main article.social-intro
+  background-color: transparent
+  padding: 50px 0 20px 50px
+  position: relative
+
+  .intro-moment
+    width: 566px
+    background: image-url("intro-moments-top.png") no-repeat top right
+
+  .intro-moment-box
+    background: image-url("intro-moments-btm.png") no-repeat bottom right
+
+  .intro-title
+    font-size: 63px
+
+  .intro-copy
+    font-size: 22px
+    margin: -15px 0 30px
+
+  .moment-bm-text
+    width: 350px
+
+  .moment-actions-like
+    display: block !important
+
+    a
+      padding: 5px 0 0 52px
+
+  .moment-comments-textarea
+    color: #888
+
+  .intro-comments
+    width: 445px
+    margin: -15px 0 0
+
+  .intro-discover-copy,
+  .intro-share-copy
+    font-family: "skippy-sharp", arial, sans-serif
+
+  .intro-discover-copy
+    position: absolute
+    top: 210px
+    right: 60px
+    width: 220px
+
+    p
+      margin: 0 0 10px
+      padding: 0 0 0 20px
+
+    span
+      display: block
+      background: image-url("intro-arrows-sprite.png") no-repeat left top
+      height: 39px
+      width: 58px
+
+    a
+      margin: 10px 0 0 20px
+
+  .intro-share-copy
+    position: absolute
+    top: 445px
+    right: 190px
+    width: 240px
+
+    p
+      margin: 0 0 10px
+      padding: 0 0 0 30px
+
+    span
+      display: block
+      background: image-url("intro-arrows-sprite.png") no-repeat 4px -35px
+      height: 40px
+      width: 55px
+
+    a
+      margin: 10px 0 0 30px
+
+  .intro-discover-copy-btn
+    position: absolute
+    top: 350px
+    right: 60px
+    width: 200px
+
+  .intro-share-copy-btn
+    position: absolute
+    top: 550px
+    right: 200px
+    width: 200px
