--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -302,3 +302,118 @@
   textarea
     margin-bottom: 10px
     height: auto
+
+
+// !Intro to social page
+
+#main article.social-intro
+  background-color: #dedddb
+  padding: 0
+
+  .intro-moment
+    width: auto
+    background: image-url("intro-moments-left.png") no-repeat top left
+
+  .intro-moment-box
+    background: image-url("intro-moments-right.png") no-repeat top right
+    padding: 139px 0 0
+
+  .intro-title
+    font-size: 53px
+    display: block
+    text-align: center
+    margin: 20px 0 0 0
+
+  .intro-copy
+    font-size: 17px
+    margin: 20px 0
+    padding: 0 2%
+    text-align: center
+    line-height: 1.4em
+
+  .moment-bm-text
+    width: 75%
+
+  .moment-actions-comment a,
+  .moment-actions-like a
+    text-indent: 100%
+    overflow: hidden
+    white-space: nowrap
+    width: 36px
+    height: 36px
+    padding: 0
+
+  .moment-actions-comment a
+    background-position: 9px -128px
+
+  .moment-actions-like
+    display: block !important
+    margin: 0 0 0 10px
+
+    a
+      padding: 0
+
+  .moment-comments-textarea
+    color: #888
+
+  .intro-comments
+    width: auto
+    margin: -15px 0 0
+
+  .intro-discover-copy,
+  .intro-share-copy
+    font-family: "skippy-sharp", arial, sans-serif
+
+  .intro-discover-copy
+    position: absolute
+    top: 237px
+    right: auto
+    width: 80%
+
+    p
+      margin: 0 0 10px
+      padding: 0 0 0 20px
+
+    span
+      display: block
+      background: image-url("intro-arrows-sprite.png") no-repeat right top
+      height: 40px
+      width: 35px
+      margin: -10px 0 0 220px
+
+  .intro-share-copy
+    position: relative
+    top: auto
+    right: auto
+    width: auto
+    overflow: hidden
+    margin: 0 0 0 10%
+
+    p
+      margin: 20px 0 10px 15px
+      padding: 0
+      float: left
+      width: 68%
+
+    span
+      display: block
+      background: image-url("intro-arrows-sprite.png") no-repeat -58px -49px
+      height: 40px
+      width: 40px
+      margin: 10px 0 0
+      float: left
+
+  .intro-discover-copy-btn
+    position: relative
+    top: auto
+    right: auto
+    width: auto
+    padding: 0 5%
+    margin: 20px 0 10px
+
+  .intro-share-copy-btn
+    position: relative
+    top: auto
+    right: auto
+    width: auto
+    padding: 0 5%
