--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -206,6 +206,19 @@ body.transition .moment
   clear: both
   margin-bottom: 2px
   padding: 10px
+  position: relative
+
+
+.moment-comment-delete
+  position: absolute
+  top: 10px
+  right: 10px
+  line-height: 1em
+  color: #aaa
+
+.moment-comments-list-comment.pending-delete
+  opacity: .5
+
 
 .moment-comments-list-text
   font-size: 13px
