Deletable comment after it's been created inline.

--- a/app/views/shared/_js_templates.html.haml
+++ b/app/views/shared/_js_templates.html.haml
@@ -96,4 +96,5 @@
           #{t("ui.datetime.just now")}
         </span>
       </p>
+      <a href="#" class="moment-comment-delete" data-comment-id="{{id}}">x</a>
     </li>   
