adjust rp calendar for mobile, comment client rb output

--- a/app/assets/stylesheets/mobile/_ui_elements.sass
+++ b/app/assets/stylesheets/mobile/_ui_elements.sass
@@ -3,9 +3,11 @@
   width: 100%
   caption, th, td
     text-align: center
+    width: 60px
   caption
     font-weight: bold
     padding-bottom: 4px
+    width: 100%
   th
     background-color: #ededed
     border:
