adjust bookmark and highlight detail view so that there is no scrollable content

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -346,6 +346,9 @@ body.transition .moment
   position: relative
   padding-bottom: 25px
 
+.moment-verse-wrap.detail-view
+  max-height: none
+
 .moment-verse
   font: 20px "times new roman", times, serif
   letter-spacing: -.035em
