--- a/app/views/highlights/show.html.haml
+++ b/app/views/highlights/show.html.haml
@@ -4,4 +4,4 @@
   = render partial: "/comments/sidebar_form", locals: {moment: @highlight}
   
 %article.social-detail
-  = render partial: "moments/highlight", locals: {moment: @highlight, comments_displayed: true}
+  = render partial: "moments/highlight", locals: {moment: @highlight, comments_displayed: true, detail_view: true}
