--- a/app/views/moments/_bookmark.html.haml
+++ b/app/views/moments/_bookmark.html.haml
@@ -2,8 +2,9 @@
   # Locals Parameters
   # moment - a single Moment to display  (Bookmark, Highlight, Note)
   # comments_displayed - boolean, true or false (whether or not to display comments when rendering html)
+  # detail_view         - boolean, true or false (whether this is a detail view or a card view)  
 
-
+  detail_view = false unless local_assigns.has_key? :detail_view
   avatars = moment.avatars
   avatar = avatars.lg_avatar
 
@@ -23,7 +24,7 @@
         = link_to(bookmark_title(moment), moment.to_path, class: "moment-title-link")
 
       - if moment.references.present?
-        .moment-verse-wrap
+        .moment-verse-wrap{:class => detail_view ? "detail-view" : ""}
           - moment.references.each do |ref|
             %p.moment-verse.empty{"data-usfm" => usfm_from_moment(ref), "data-version-id" => ref.version_id }
               = "#{ref.human}(#{ref.usfm})"
