--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -212,9 +212,18 @@ body.transition .moment
 .moment-comment-delete
   position: absolute
   top: 10px
-  right: 10px
+  right: 0
   line-height: 1em
   color: #aaa
+  text-indent: 100%
+  white-space: nowrap
+  overflow: hidden
+  height: 30px
+  width: 30px
+  background: image-url("social-actions-sprite.png") no-repeat center -423px
+
+.moment-comment-delete:hover
+  background: image-url("social-actions-sprite.png") no-repeat center -472px
 
 .moment-comments-list-comment.pending-delete
   opacity: .5
