Include typekit on intro page

--- a/app/views/pages/intro.html.haml
+++ b/app/views/pages/intro.html.haml
@@ -1,4 +1,8 @@
 - @sidebar = false
+- content_for :javascripts do
+  = javascript_include_tag '//use.typekit.net/mgk8ovf.js'
+  :javascript
+    try{Typekit.load();}catch(e){}
 
 %article.social-intro
   %h1.intro-title
