Intro page font size

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -874,6 +874,7 @@ body.transition .moment
   .intro-discover-copy,
   .intro-share-copy
     font-family: "skippy-sharp", arial, sans-serif
+    font-size: 19px
 
   .intro-discover-copy
     position: absolute
