--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -373,6 +373,7 @@
     p
       margin: 0 0 10px
       padding: 0 0 0 20px
+      font-size: 20px
 
     span
       display: block
@@ -394,6 +395,7 @@
       padding: 0
       float: left
       width: 68%
+      font-size: 20px
 
     span
       display: block
