Tweaked some styles now that Typekit is working.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -871,16 +871,17 @@ body.transition .moment
     width: 445px
     margin: -15px 0 0
 
-  .intro-discover-copy,
-  .intro-share-copy
+  .intro-discover-copy p,
+  .intro-share-copy p
     font-family: "skippy-sharp", arial, sans-serif
-    font-size: 19px
+    font-size: 28px
+    line-height: 1.1em
 
   .intro-discover-copy
     position: absolute
     top: 210px
-    right: 60px
-    width: 220px
+    right: 0
+    width: 280px
 
     p
       margin: 0 0 10px
@@ -898,8 +899,8 @@ body.transition .moment
   .intro-share-copy
     position: absolute
     top: 445px
-    right: 190px
-    width: 240px
+    right: 130px
+    width: 300px
 
     p
       margin: 0 0 10px
@@ -916,12 +917,12 @@ body.transition .moment
 
   .intro-discover-copy-btn
     position: absolute
-    top: 350px
+    top: 360px
     right: 60px
     width: 200px
 
   .intro-share-copy-btn
     position: absolute
-    top: 550px
+    top: 560px
     right: 200px
     width: 200px
