--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,3 +1,6 @@
+@import jquery.ui.core
+@import jquery.ui.theme
+@import jquery.ui.autocomplete
 @import compass/css3
 @import vars
 @import clearfix
