--- a/app/views/moments/_daily_verse.html.haml
+++ b/app/views/moments/_daily_verse.html.haml
@@ -1,8 +1,12 @@
-- verse_of_today = VOD.today(client_settings.version || Version.default)
+:ruby
+  versions = client_settings.recent_versions
+  recent_versions = versions.present? ? versions.split("/") : [client_settings.version || Version.default]
+
+- verse_of_today = VOD.today((client_settings.version || Version.default), {recent_versions: recent_versions})
 
 .moment
   .moment-top
-    .moment-vod
+    .moment-vod{"data-references" => "#{verse_of_today.usfm}:#{verse_of_today.verses.join(',')}"}
       %span.moment-icon
         &nbsp;
       .moment-vod-calendar
@@ -20,5 +24,7 @@
       = link_to(verse_of_today.human, reference_path(version: verse_of_today.version, reference: verse_of_today.usfm), class: "moment-vod-links")
 
       %ul.moment-vod-list
-        %li.moment-vod-list-on
-          = verse_of_today.version.abbreviation.upcase
+        - unless verse_of_today.recent_versions.blank?
+          - verse_of_today.recent_versions.each do |version|
+            %li.btn{"data-version-id" => version.id, class: (verse_of_today.version.id == version.id) ? "active" : nil}
+              = version.abbreviation.upcase
