adjust margins/spacing for social intro page buttons

--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -322,7 +322,7 @@
     font-size: 53px
     display: block
     text-align: center
-    margin: 20px 0 0 0
+    margin: 20px 10px 0 10px
 
   .intro-copy
     font-size: 17px
@@ -410,12 +410,11 @@
     top: auto
     right: auto
     width: auto
-    padding: 0 5%
-    margin: 20px 0 10px
+    margin: 20px 10% 10px 5%
 
   .intro-share-copy-btn
     position: relative
     top: auto
     right: auto
     width: auto
-    padding: 0 5%
+    margin: 0 10% 20px 5%
