--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -64,7 +64,7 @@
     font-size: 14px
     font-weight: bold
     line-height: 18px
-    padding: 10px 15px
+    padding: 10px 35px 10px 15px
     position: relative
     border-bottom: 1px solid #DEDDDB
     background-color: #EEEDEB
@@ -363,8 +363,9 @@
       opacity: .5
       background:
         image: image-url("icon_settings.png")
-      float: right
-      margin-top: 4px
+      position: absolute
+      top: 10px
+      right: 10px
 
       span
         display: block
