adjust line-height for moment verses

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -366,6 +366,7 @@ body.transition .moment
   clear: both
   background-color: #F5F4F3
   +border-radius(5px)
+  line-height: 25px
 
   .verse > .label
     display: none !important
