--- a/app/views/moments/_bookmark.html.haml
+++ b/app/views/moments/_bookmark.html.haml
@@ -8,7 +8,7 @@
   avatars = moment.avatars
   avatar = avatars.lg_avatar
 
-.moment
+.moment{"data-moment-id" => moment.id}
   -# !the content of the moment
   .moment-top
     .moment-bm
