--- a/app/views/moments/_note.html.haml
+++ b/app/views/moments/_note.html.haml
@@ -8,7 +8,7 @@
   avatars = moment.avatars
   avatar = avatars.lg_avatar
 
-.moment
+.moment{"data-moment-id" => moment.id}
   .moment-top
     .moment-no
       %span.moment-icon
