--- a/app/assets/stylesheets/mobile/_notifications.sass
+++ b/app/assets/stylesheets/mobile/_notifications.sass
@@ -71,6 +71,17 @@
     min-width: 0
     margin: 0
 
+#requests-menu
+  .requests-user-search
+    margin: 0 10px 15px 
+
+  .requests-field-query
+    width: 100%
+    margin: 0
+
+  .requests-field-submit
+    margin: 0     
+
 // ------ Edit notifications page
 
 .notification-settings-group
