Styled the selected highlight color.

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -377,7 +377,9 @@
   background:
     image: image-url("verse_action_sprite.png")
     repeat: no-repeat
-  text-indent: -2000px
+  text-indent: 100%
+  overflow: hidden
+  white-space: no-wrap
 
 #menu_verse_actions dt.highlight
   background-position: 37px 10px
