Add likes blurb/row to moment cards, not displaying comment/likes rows on detail page.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -184,14 +184,7 @@ body.transition .moment
 
 // !Specific comments code
 
-.moment-comments-likes
-  background: #EEEDEB image-url("social-actions-sprite.png") no-repeat
-  font-size: 13px
-
-.moment-comments-likes
-  padding-left: 35px
-  background-position: 10px -41px
-
+.moment-comments-likes,
 .moment-comments-more
   padding: 3px 0 3px 11px
 
