--- a/app/views/moments/_note.html.haml
+++ b/app/views/moments/_note.html.haml
@@ -39,4 +39,4 @@
 
   .moment-btm
     = render partial: "moments/actions_bar", locals: {moment: moment}
-    = render partial: "moments/comments", locals: {moment: moment, comments_displayed: comments_displayed}
+    = render partial: "moments/comments", locals: {moment: moment, comments_displayed: comments_displayed, detail_view: detail_view}
